tests/sysy/valid/array_param_const_dimension.sy
const int N = 3;

int pick(int a[][N]) {
    return a[1][2];
}

int main() {
    int a[2][N] = {1, 2, 3, 4, 5, 6};
    return pick(a);
}
