tests/sysy/invalid/non_sysy_type.sy
double x;
int main() {
    return 0;
}
